--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -44,38 +44,38 @@
 								</div>
 							</div>
 						</div>
-						<div class="col-md-12">
-							<div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-3 col-md-offset-5">
-								<% if (message.length > 0) { %>
-										<div class="alert alert-danger"><%= message %></div>
-								<% } %>
-							<form class="omb_loginForm" name='signupForm' action="/signup" method="post">
-							<div class="input-group">
-								<span class="input-group-addon"><i class="fa fa-envelope"></i></span>
-								<input type="text" class="form-control" name="email" placeholder="Email address" required>
-							</div>
-							<span class="help-block"></span>
-							<div class="input-group">
-								<span class="input-group-addon"><i class="fa fa-users"></i></span>
-								<input type="text" class="form-control" name="username" placeholder="Username" required>
-							</div>
-							<span class="help-block"></span>
-							<div class="input-group">
-								<span class="input-group-addon"><i class="fa fa-lock"></i></span>
-								<input ng-model="password" type="password" class="form-control" name="user_password" placeholder="Password" ng-required="true">
-							</div>
-							<span class="help-block"></span>
-							<div class="input-group">
-								<span class="input-group-addon"><i class="fa fa-lock"></i></span>
-								<input ng-model="repeat_password" match="password"  type="password" class="form-control" name="user_password" placeholder="Repeat password" ng-required="true">
-							</div>
-							<span class="help-block"></span>
-							<div class="alert alert-danger" ng-show="signupForm.user_password.$error.mismatch">Passwords doesn't match!</div>
-							<br>
-							<button class="btn btn-lg btn-primary btn-block" type=submit ng-disabled='signupForm.$invalid'>Sign Up</button>
-						</form>
+				<div class="col-md-12">
+					<div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-3 col-md-offset-5">
+						<% if (message.length > 0) { %>
+								<div class="alert alert-danger"><%= message %></div>
+						<% } %>
+					<form class="omb_loginForm" name='signupForm' action="/signup" method="post">
+					<div class="input-group">
+						<span class="input-group-addon"><i class="fa fa-envelope"></i></span>
+						<input type="text" class="form-control" name="email" placeholder="Email address" required>
 					</div>
-				</div>
+					<span class="help-block"></span>
+					<div class="input-group">
+						<span class="input-group-addon"><i class="fa fa-users"></i></span>
+						<input type="text" class="form-control" name="username" placeholder="Username" required>
+					</div>
+					<span class="help-block"></span>
+					<div class="input-group">
+						<span class="input-group-addon"><i class="fa fa-lock"></i></span>
+						<input ng-model="password" type="password" class="form-control" name="password" placeholder="Password" ng-required="true">
+					</div>
+					<span class="help-block"></span>
+					<div class="input-group">
+						<span class="input-group-addon"><i class="fa fa-lock"></i></span>
+						<input ng-model="repeat_password" match="password"  type="password" class="form-control" name="password2" placeholder="Repeat password" ng-required="true">
+					</div>
+					<span class="help-block"></span>
+					<div class="alert alert-danger" ng-show="signupForm.password2.$error.mismatch">Passwords doesn't match!</div>
+					<br>
+					<button class="btn btn-lg btn-primary btn-block" type=submit ng-disabled='signupForm.$invalid'>Sign Up</button>
+				</form>
+			</div>
+		</div>
 				<div class="col-md-12 text-center">
 					<div class="col-xs-12 col-sm-6 col-md-3 col-md-offset-5">
 						<p><a href="/login">Already have an account?</a></p>
