--- a/views/css/games.css
+++ b/views/css/games.css
@@ -103,6 +103,9 @@ footer {
 		-webkit-column-count: 2;
 		-moz-column-count: 2;
 		column-count: 2;
+    -moz-column-gap: 5px;
+    padding-left: 0px;
+    padding-right: 0px;
 	}
 }
 @media (min-width: 480px) {
