--- a/views/css/profile.css
+++ b/views/css/profile.css
@@ -115,7 +115,7 @@ footer {
 	word-wrap: break-word;
 }
 .masonary-row [class*="col-"] {
-	 display: inline-block;
+	 display: inline-block;;
 	 width: 100%;
 	 height: 100%;
 	 float: none;
@@ -126,6 +126,9 @@ footer {
 		-webkit-column-count: 2;
 		-moz-column-count: 2;
 		column-count: 2;
+    -moz-column-gap: 5px;
+    padding-left: 0px;
+    padding-right: 0px;
 	}
 }
 @media (min-width: 480px) {
@@ -143,6 +146,7 @@ footer {
 	}
 }
 .thumbnail {
+  float: none;
   -webkit-box-shadow: 3px 4px 5px 0px rgba(0,0,0,0.75);
 -moz-box-shadow: 3px 4px 5px 0px rgba(0,0,0,0.75);
 box-shadow: 3px 4px 5px 0px rgba(0,0,0,0.75);
