--- a/views/games.ejs
+++ b/views/games.ejs
@@ -9,11 +9,14 @@
 	<link href="/css/games.css" rel="stylesheet" type="text/css">
 	<link href="/css/navbar.css" rel="stylesheet" type="text/css">
 	<link href="/css/heart_animation.css" rel="stylesheet" type="text/css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.1.3/toastr.min.css">
 
 	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 	<script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.11/angular.js"></script>
 	<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 	<script src="//cdn.jsdelivr.net/jdenticon/1.3.2/jdenticon.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap3-dialog/1.34.5/js/bootstrap-dialog.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.1.3/toastr.min.js"></script>
 
 	<script src="js/controller/searchCtrl.js"></script> <!-- load up our controller -->
 	<script src="js/services/searchService.js"></script> <!-- load our game service -->
@@ -42,10 +45,11 @@
 						<div ng-repeat="i in games">
 							<div class="col-xs-6 col-sm-6 col-md-6">
 								<div class="thumbnail ">
-									<div class="circle" ng-click="addGame(i); disable = !disable">
+									<!-- <div class="circle" ng-click="addGame(i); disable = !disable"> -->
+									<div class="circle" ng-click="askPlatform(i); disable = !disable">
 										<i ng-class="disable ? 'fa fa-check' : 'fa fa-plus'"></i>
 									</div>
-									<img ng-src="http://res.cloudinary.com/igdb/image/upload/t_cover_big_2x/{{i.cover.cloudinary_id}}" err-src="http://www.omgchrome.com/wp-content/uploads/2015/06/chrome-trex-dinosaur.jpg"/>
+									<img ng-src="http://res.cloudinary.com/igdb/image/upload/t_cover_big_2x/{{i.cover.cloudinary_id}}" err-src="http://www.vishmax.com/en/innovattive-cms/themes/themax-theme-2015/images/no-image-found.gif"/>
 								<div class="caption">
 									<h4>{{i.name}}</h4>
 									<p class="flex-text text-muted"></p>
