--- a/views/login.ejs
+++ b/views/login.ejs
@@ -19,10 +19,9 @@
 			<div class="container-fluid">
     		<div class="row-fluid">
 					<div class="centering">
-						<div class="col col-xs-11 col-xs-offset-1 col-sm-8 col-md-8 col-md-offset-5">
+						<div class="col col-xs-11 col-xs-offset-1 col-sm-8 col-sm-offset-4 col-md-8 col-md-offset-5">
 							<div id="logo" class="col col-xs-11 col-sm-8 col-md-8">
-								<img id="icon" src="/asets/logo.svg" class="svg">
-								<img id="title" src="/asets/localGame.svg" class="svg">
+								<img src="/asets/logo_title.svg" class="svg">
 						</div>
 	  				<div class="col-xs-12 col-sm-12 col-md-12" id="social">
 			        <div class="col-xs-4 col-sm-2 col-md-1">
@@ -35,7 +34,7 @@
 			          <a href="/auth/google" data-toggle="tooltip" data-placement="bottom" title="Sign-up with Google+ account" class="googleplusBtn button"></a>
 			        </div>
 	  				</div>
-	  				<div class="col-sm-12 col-md-4">
+	  				<div class="col-sm-8 col-md-4">
 	      			<hr>
 	  				</div>
 	  			<div class="col col-md-12">
@@ -60,7 +59,7 @@
 	    		</div>
 	    	</div>
 	  		<div class="col-md-12">
-	    		<div class="col-xs-8 col-sm-3 col-md-2">
+	    		<div class="col-xs-8 col-sm-4 col-md-2">
 			      <p><a href="#">Forgot password?</a></p>
 	    		</div>
 	    		<div class="col-xs-3 col-sm-3 col-sm-offset-2 col-md-2 col-md-offset-1">
