--- a/views/css/navbar.css
+++ b/views/css/navbar.css
@@ -12,29 +12,35 @@
 
 #identicon {
   margin-top: 4px;
+}
+#content {
   display: inline-block;
 }
-
-
-li #logout {
-  margin: 0px;
-  display: inline;
+#profile_pic {
+  display: inline-block;
+}
+#user {
+  display: ruby-text-container;
+}
+#user_text {
+  color: white;
+  padding-right: 15px;
+  padding-left: 5px;
+}
+#logout {
+  display: ruby-text-container;
+}
+#logout_icon {
+  color: white;
+  padding-left: 15px;
 }
 
 #logo {
   height: 30px;
-  width: 50px;
+width: 180px;
+margin-top: 5px;
 }
 
-#title {
-  height: 40px;
-  width: 100px;
-  margin-right: 5px;
-}
-#profile_link {
-  padding: 0px;
-  display: inline-block;
-}
 #username {
   color: white;
   margin: 0px;
