--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -14,7 +14,6 @@
 	<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 	<script src="/js/controller/signupCtrl.js"></script> <!-- load up our controller -->
 
-
 </head>
 <body ng-controller="signupCtrl">
 	<main>
@@ -22,10 +21,9 @@
 			<div class="container-fluid">
     		<div class="row-fluid">
 					<div class="centering">
-						<div class="col col-xs-11 col-xs-offset-1 col-sm-8 col-md-8 col-md-offset-5">
+						<div class="col col-xs-11 col-xs-offset-1 col-sm-offset-3 col-sm-8 col-md-8 col-md-offset-5">
 							<div id="logo" class="col col-xs-11 col-sm-8 col-md-8">
-								<img id="icon" src="/asets/logo.svg" class="svg">
-								<img id="title" src="/asets/localGame.svg" class="svg">
+								<img src="/asets/logo_title.svg" class="svg">
 							</div>
 							<div class="col-xs-12 col-sm-12 col-md-12" id="social">
 								<div class="col-xs-4 col-sm-2 col-md-1">
@@ -77,7 +75,7 @@
 			</div>
 		</div>
 				<div class="col-md-12 text-center">
-					<div class="col-xs-12 col-sm-6 col-md-3 col-md-offset-5">
+					<div class="col-xs-12 col-sm-6 col-sm-offset-3 col-md-3 col-md-offset-5">
 						<p><a href="/login">Already have an account?</a></p>
 					</div>
 				</div>
