--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -27,7 +27,7 @@
 	<script src="/js/directive.js"></script>
 	<script src="/js/controller/headerCtrl.js"></script>
 	<script src="/socket.io/socket.io.js"></script>
-	<script src="http://code.jquery.com/jquery-1.11.1.js"></script>
+	<script src="https://code.jquery.com/jquery-1.11.1.js"></script>
 	<script>
 	  var socket = io.connect();
 	</script>
