--- a/views/games.ejs
+++ b/views/games.ejs
@@ -9,18 +9,16 @@
 	<link href="/css/games.css" rel="stylesheet" type="text/css">
 	<link href="/css/navbar.css" rel="stylesheet" type="text/css">
 	<link href="/css/heart_animation.css" rel="stylesheet" type="text/css">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.1.3/toastr.min.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.1.3/toastr.min.css" async>
 
 	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
-	<script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.11/angular.js"></script>
+	<script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.11/angular.min.js"></script>
 	<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.1.4/ui-bootstrap-tpls.min.js"></script><!-- Bootstrap UI -->
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.0/angular-animate.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.0/angular-animate.min.js" async></script>
 	<script src="//cdn.jsdelivr.net/jdenticon/1.3.2/jdenticon.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap3-dialog/1.34.5/js/bootstrap-dialog.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.1.3/toastr.min.js"></script>
-
-
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap3-dialog/1.34.5/js/bootstrap-dialog.min.js" async></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.1.3/toastr.min.js" async></script>
 
 	<script src="js/controller/searchCtrl.js"></script> <!-- load up our controller -->
 	<script src="js/services/searchService.js"></script> <!-- load our game service -->
@@ -36,11 +34,6 @@
 			<div id="search_bar" class="col-md-12 col-sm-12 col-xs-12 centerBlock">
 					<form id="search" class="form-inline" role="form">
 						<div class="form-group col-sm-10 col-md-4 col-xs-9">
-							<!-- <input type="text" class="form-control input-md" placeholder="Search for games..." ng-model="search" ng-model-options="{debounce: 100}"> -->
-							<!-- <input ng-model="search" ng-model-options="{debounce: 100}"
-							uib-typeahead="game as game.name for game in games2 | filter:$viewValue | limitTo:8"
-							class="form-control ng-valid ng-dirty ng-not-empty ng-touched ng-valid-editable"
-							aria-autocomplete="list" aria-expanded="false" aria-owns="typeahead-82-963" style="" type="text"> -->
 							<input type="text" ng-model="search" ng-model-options="{debounce: 100}" placeholder="Search for games..."
     				uib-typeahead="game.name for game in sugestions($viewValue)" typeahead-on-select="searchGame()"
 						aria-autocomplete="list" aria-expanded="false" aria-owns="typeahead-82-963"
@@ -56,11 +49,21 @@
 			</div>
 			<div class="container col col-lg-12 col-md-12 col-sm-12 col-xs-12">
 				<div loading></div>
-				<div class="masonary-row row" ng-show="games">
+				<ul class="list" >
+				  <li class="list_item" ng-repeat="i in games">
+				    <figure class="list_item_inner">
+				      <div class="circle" ng-click="askPlatform(i); disable = !disable">
+				        <i ng-class="disable ? 'fa fa-check' : 'fa fa-plus'"></i>
+				      </div>
+				      <img ng-src="https://images.igdb.com/igdb/image/upload/t_cover_big_2x/{{i.cover.cloudinary_id}}" err-src="../asets/no-image-found.gif"/>
+				      <figcaption><h4>{{i.name}}</strong></h4>
+				    </figure>
+				  </li>
+				</ul>
+				<!-- <div class="masonary-row row" ng-show="games">
 						<div ng-repeat="i in games">
 							<div class="col-xs-6 col-sm-6 col-md-6">
 								<div class="thumbnail ">
-									<!-- <div class="circle" ng-click="addGame(i); disable = !disable"> -->
 									<div class="circle" ng-click="askPlatform(i); disable = !disable">
 										<i ng-class="disable ? 'fa fa-check' : 'fa fa-plus'"></i>
 									</div>
@@ -72,7 +75,7 @@
 							</div>
 					</div>
 				</div>
-			</div>
+			</div> -->
 			<div class="alert alert-danger" class="col col-md-12 col-xs-12" ng-show="error">
 				<strong>Error!</strong> No results found...
 			</div>
