Improved user profiles and ui scaling on different devices

--- a/views/css/games.css
+++ b/views/css/games.css
@@ -37,7 +37,7 @@
         font-size: 28px;
     }
     .list_item {
-      width: 100%;
+      width: 50%;
       float: none;
     }
 }
@@ -149,6 +149,7 @@ footer {
 }
 ul {
   list-style: none;
+  padding: 0;
 }
 .list_item_inner {
   width: 100%;
