--- a/views/js/partials/friends.html
+++ b/views/js/partials/friends.html
@@ -1,10 +1,10 @@
 <div ng-repeat="i in friends">
-<div id="requests" class="col col-md-12 tab-pane fade in active" ng-show="user_friends">
+<div id="requests" class="col col-md-12 col-sm-12 col-xs-12 tab-pane fade in active" ng-show="user_friends">
       <div class="col-md-12">
-        <div class="col-md-1 col-sm-2 col-xs-5">
+        <div class="col-md-1 col-sm-1 col-xs-4">
           <img id="reqProfile" src="../../asets/user.svg"></img>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-3 col-sm-2 col-xs-3">
           <h3><a href="/user/?id={{i.user}}" target="_blank">{{i.username}}</a></h3>
         </div>
       </div>
