--- a/views/js/partials/messages.html
+++ b/views/js/partials/messages.html
@@ -1,5 +1,5 @@
+<link href="/css/messages.css" rel="stylesheet" type="text/css">
 <script>
-  // var socket = io.connect();
   socket.on('chat message', function(msg,from,created){
     var message = $(
       '<ul class="chats">'+
@@ -20,38 +20,38 @@
 </script>
 <div ng-hide="messages_view">
 <div class="toolbar col col-md-10">
-  <button id="new_msg" class="btn btn-info col-md-2" data-toggle="modal" data-target="#newMessage"><b>New Message <span class="fa fa-envelope"></span></button>
+  <button id="new_msg" class="btn btn-info col-md-2 col-sm-3" data-toggle="modal" data-target="#newMessage"><b>New Message <span class="fa fa-envelope"></span></button>
 
   <form ng-submit="quickSearch(1)">
-		<div class="input-group col-md-6">
-			<input id="qicksearch" type="text" class="form-control" ng-model="quicksearch" ng-init="quicksearch=''" value="" placeholder="Search for conversation">
+		<div class="input-group col-md-6 col-sm-6" id="quicksearch">
+			<input type="text" class="form-control" ng-model="quicksearch" ng-init="quicksearch=''" value="" placeholder="Search for conversation">
 			<div style="cursor:pointer" ng-click="quickSearch(1)" class="input-group-addon"><i class="fa fa-search"></i></div>
 		</div>
 	</form>
 </div>
 <div ng-repeat="i in conversation" ng-hide="conversations">
-<div id="requests" class="col col-md-12 tab-pane fade in active">
-      <div class="col-md-12">
-        <div class="col-md-1 col-sm-2 col-xs-5">
+<div id="requests" class="col col-md-12 col-sm-12 col-xs-12 tab-pane fade in active">
+      <div class="col-md-12 col-sm-12 col-xs-12">
+        <div class="col-md-1 col-sm-2 col-xs-3">
           <img id="reqProfile" src="../../asets/user.svg"></img>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-3 col-sm-4 col-xs-9">
           <p id="withUser" ng-if="i.participants[0] == sessionUser2">Conversation with: {{i.participants[1]}}</p>
           <p id="withUser" ng-if="i.participants[1] == sessionUser2">Conversation with: {{i.participants[0]}}</p>
         </div>
+          <button class="btn btn-info" id="continue" ng-click="loadMessages(i.id, i.roomID, i.participants)"><i class="fa fa-comments"></i> Continue conversation</button>
       </div>
-      <button class="btn btn-info" id="continue" ng-click="loadMessages(i.id, i.roomID, i.participants)"><i class="fa fa-comments"></i> Continue conversation</button>
     </div>
 </div>
 <div ng-init="hideLoading()"></div>
 </div>
 <div ng-show="chat_view">
-  <div class="messageView">
+  <div class="col col-md-12 col-sm-12 col-xs-12 messageView">
     <!-- <input id="msg_input" type="text" class="form-control col-md-5" ng-model="message"  value="" placeholder="Message text..">
     <button class="btn btn-success">Send</button> -->
     <div ng-repeat="i in messages" ng-init="$last && scrollToBottom( )" class="chatscreenOld">
-      <ul class="chats">
-        <li class="person" ng-class="setPosition(i.from)">
+      <ul class="col col-xs-12 chats">
+        <li class="col col-xs-12 person" ng-class="setPosition(i.from)">
           <div class="image">
             <img src='../asets/unnamed.jpg'/>
             <b>{{i.from}}</b>
@@ -63,10 +63,13 @@
     <div class="chatscreenNew">
     </div>
     <footer>
-    <form id="chatform">
-      <!-- <input id="m" autocomplete="off" /><button id="send">Send</button> -->
-      <textarea id="chatmessage" placeholder="Write something.."></textarea>
+    <form class="col col-xs-12">
+      <div>
+      <textarea class="col col-md-4 col-sm-6 col-xs-8" id="chatmessage" autocomplete="off" placeholder="Write something.."></textarea>
+    </div>
+    <div class="col col-md-2 col-sm-2 col-xs-4">
 			<button type="button" class="btn btn-success" id="submit" ng-click="sendChat()">Send</button>
+    </div>
     </form>
   </footer>
   </div>
