--- a/views/css/requests.css
+++ b/views/css/requests.css
@@ -102,6 +102,7 @@ footer {
 }
 ul {
   list-style: none;
+  padding: 0;
 }
 .list_item_inner {
   width: 100%;
@@ -120,6 +121,10 @@ figure {
   margin: 0;
 }
 #action .col-xs-12 {
+  padding-right: 0px;
+  padding-left: 0px;
+}
+.col-xs-12 {
   padding-right: 0px;
   padding-left: 0px;
 }
