--- a/views/css/user.css
+++ b/views/css/user.css
@@ -1,3 +1,46 @@
+@media screen and (max-width: 1920px){
+    h2 {
+        font-size: 38px;
+    }
+    .list_item {
+      width: 20%;
+    }
+}
+@media screen and (max-width: 1024px){
+    h2 {
+        font-size: 38px;
+    }
+    .list_item {
+      width: 25%;
+    }
+}
+@media screen and (max-width: 720px){
+    h2 {
+        font-size: 38px;
+    }
+    .list_item {
+      width: 33.333%;
+    }
+}
+
+@media screen and (max-width: 640px){
+    h2 {
+        font-size: 30px;
+    }
+    .list_item {
+      width: 50%;
+    }
+}
+
+@media screen and (max-width: 320px){
+    h2 {
+        font-size: 28px;
+    }
+    .list_item {
+      width: 50%;
+      float: none;
+    }
+}
 body {
   background-image: url("../asets/user_background_optimized.jpg");
   background-size: cover;
@@ -52,7 +95,6 @@ footer {
 
 .trade{
   position: absolute;
-  right: 0;
   display: inline-block;
   margin-right: 5px;
   -moz-box-shadow: 0px 0px 2px #888;
@@ -60,71 +102,79 @@ footer {
   box-shadow: 0px 0px 2px #888;
 }
 
-.masonary-row.row {
-	-webkit-column-gap: 30px;
-	-moz-column-gap: 30px;
-	column-gap: 30px;
-	padding-left: 15px;
-	padding-right: 15px;
-  padding-top: 10px;
-	word-wrap: break-word;
+.fa-check {
+  color:  #03a9f4;
 }
-.masonary-row [class*="col-"] {
-	 display: inline-block;
-	 width: 100%;
-	 height: 100%;
-	 float: none;
-	 padding: 5px;
+.circle{
+  cursor: pointer;
+  height: 40px;
+  width: 40px;
+  position: absolute;
+  z-index: 1;
+  padding: 11px 14px;
+  background: #ffee4d;
+  display: inline-block;
+  -moz-border-radius: 100px;
+  -webkit-border-radius: 100px;
+  border-radius: 100px;
+  -moz-box-shadow: 0px 0px 2px #888;
+  -webkit-box-shadow: 0px 0px 2px #888;
+  box-shadow: 0px 0px 2px #888;
 }
-@media (min-width: 0px) {
-	.masonary-row.row {
-		-webkit-column-count: 2;
-		-moz-column-count: 2;
-		column-count: 2;
-	}
-  #request {
-    margin-top: 0px;
-    margin-bottom: 5px;
-  }
-}
-@media (min-width: 480px) {
-	.masonary-row.row {
-		-webkit-column-count: 4;
-		-moz-column-count: 4;
-		column-count: 4;
-	}
-}
-@media (min-width: 768px) {
-	.masonary-row.row {
-		-webkit-column-count: 5;
-		-moz-column-count: 5;
-		column-count: 5;
-	}
-  #request {
-    margin-top: 25px;
-  }
-}
-/*@media all and (max-device-width: 720px){
-    h2 {
-        font-size: 20px;
-    }
-}*/
-
-@media all and (max-device-width: 640px){
-    h2 {
-        font-size: 28px;
-    }
+.circle:hover{
+  background:  #f44336;
 }
 
-@media all and (max-device-width: 320px){
-    h2 {
-        font-size: 24px;
-    }
+.circle > .fa + .fa,
+.circle:hover > .fa {
+  display: none;
 }
-.thumbnail {
-  -webkit-box-shadow: 3px 4px 5px 0px rgba(0,0,0,0.75);
--moz-box-shadow: 3px 4px 5px 0px rgba(0,0,0,0.75);
-box-shadow: 3px 4px 5px 0px rgba(0,0,0,0.75);
+.circle:hover > .fa + .fa {
+  display: inherit;
+}
+.list {
+  width: 100%;
+  overflow: hidden;
+  background-color: rgba(255, 255, 255, 0.5);
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+
+  -webkit-flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+}
+.list_item {
+  padding: 0.625rem;
+  padding-top: 15px;
+  float: left;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+}
+.list_item img {
+  width: 100%;
+  display: block;
+}
+ul {
+  list-style: none;
+  padding: 0;
+}
+.list_item_inner {
+  width: 100%;
+  overflow: hidden;
+  background-color: white;
+  padding: 2px;
+  -webkit-box-shadow: 1px 1px 5px 0px rgba(0,0,0,0.75);
+  -moz-box-shadow: 1px 1px 5px 0px rgba(0,0,0,0.75);
+  box-shadow: 1px 1px 5px 0px rgba(0,0,0,0.75);
+}
+.list_item figcaption {
+  padding: 1.25rem;
+}
+figure {
+  padding: 0;
+  margin: 0;
 }
 
 #profile {
@@ -142,7 +192,6 @@ box-shadow: 3px 4px 5px 0px rgba(0,0,0,0.75);
 #username {
   margin-top: 4px;
 }
-
-.cards {
-  background-color: whitesmoke;
+#request {
+  margin-top: 25px;
 }
