--- a/views/templates/navbar.ejs
+++ b/views/templates/navbar.ejs
@@ -7,7 +7,7 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <a class="navbar-brand" href="#/mygames"><img id="logo" src="/asets/logo_title.svg" class="svg"></a>
+    <a class="navbar-brand" href="/profile#/mygames"><img id="logo" src="/asets/logo_title.svg" class="svg"></a>
   </div>
   <div class="collapse navbar-collapse" id="navbar-collapse-1">
     <ul class="nav navbar-nav">
