--- a/views/js/partials/gameRequests.html
+++ b/views/js/partials/gameRequests.html
@@ -7,7 +7,7 @@
         <figcaption><strong>{{i.game}}</strong>
         <br>
         <h5>Requested by: <a href="/user/?id={{i.user}}">{{i.username}}</a></h5>
-        <div id="action_buttons" class="col-md-12 col-sm-12 col-xs-12">
+        <div id="action_buttons" class="col-md-12 col-sm-12 col-xs-12 nopadding">
           <div id="action">
             <button class="btn btn-success col-md-5 col-sm-12 col-xs-12" ng-click="acceptGameRequest(i)">Accept</button>
           </div>
