--- a/views/css/mygames.css
+++ b/views/css/mygames.css
@@ -71,3 +71,12 @@ figure {
   padding: 0;
   margin: 0;
 }
+#platformLogo {
+  height: 15px;
+  width: 15px;
+}
+.platform {
+  display: inline-block;
+  margin-right: 10px;
+  padding: 5px;
+}
