--- a/views/js/partials/messages.html
+++ b/views/js/partials/messages.html
@@ -81,22 +81,24 @@
     <button type="button" class="close" data-dismiss="modal">&times;</button>
         <img width="100px" height="40px" alt="Brand" src="../../asets/logo_title.svg">
 </div>
+  <form>
 <div class="modal-body">
     <div id="quicksearch" class="input-group col-md-12">
     <input ng-model="to" ng-model-options="{debounce: 100}"
     uib-typeahead="friend as friend.username for friend in friends | filter:$viewValue | limitTo:8"
     class="form-control ng-valid ng-dirty ng-not-empty ng-touched ng-valid-editable"
-    aria-autocomplete="list" aria-expanded="false" aria-owns="typeahead-82-963" style="" type="text" placeholder="Search for user">
+    aria-autocomplete="list" aria-expanded="false" aria-owns="typeahead-82-963" style="" type="text" placeholder="Send message to..." required>
       <div style="cursor:pointer" ng-click="" class="input-group-addon"><i class="fa fa-search"></i></div>
     </div>
   <div class="form-group">
-    <textarea rows="6" cols="70" ng-model="message" placeholder="Message.."></textarea>
+    <textarea class="form-control" rows="6" cols="60" ng-model="message" placeholder="Message.." required></textarea>
   </div>
 </div>
 <div class="modal-footer">
-<button type="button" class="btn btn-success" data-dismiss="modal" ng-click="sendMessage()">Send</button>
+<input type="submit" class="btn btn-success" value="Send" ng-click="sendMessage()">
   <button type="button" class="btn btn-warning" data-toggle="modal" data-dismiss="modal">Cancel</button>
 </div>
+</form>
 </div>
 </div>
 </div>
