--- a/views/map.ejs
+++ b/views/map.ejs
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Map-view</title>
+    <link rel="icon" type="image/svg+xml" href="/asets/logo.svg">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
     <link href="/css/map.css" rel="stylesheet" type="text/css">
@@ -19,20 +20,20 @@
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.8/angular-route.js"></script>
     <script src="/js/components/angularjs-geolocation.min.js"></script>
-    <script src="//cdn.jsdelivr.net/jdenticon/1.3.2/jdenticon.min.js"></script>
+    <script src="//cdn.jsdelivr.net/jdenticon/1.4.0/jdenticon.min.js" async></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap3-dialog/1.34.5/js/bootstrap-dialog.min.js"></script>
     <!-- Angular Files -->
     <script src="/js/app.js"></script> <!-- load our main application -->
 
-
+    <script src="js/controller/navbarCtrl.js"></script> <!-- load up our controller -->
     <script src="js/services/jdenticonService.js"></script> <!-- load our game service -->
     <script src="js/controller/mapCtrl.js"></script>
     <script src="/js/gservice.js"></script>
     <script src="/js/directive.js"></script>
 
 </head>
-<body ng-controller="mapCtrl">
 <div navbar></div> <!--navbar directive-->
+<body ng-controller="mapCtrl">
   <div class="container">
       <div class="row content">
           <div class="col-md-10">
