--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -2,6 +2,7 @@
 <html ng-app="gameApp">
 <head>
 	<title>My Games</title>
+	<link rel="icon" type="image/svg+xml" href="/asets/logo.svg">
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
@@ -11,16 +12,17 @@
 	<link href="/css/navbar.css" rel="stylesheet" type="text/css">
 	<link href="/css/heart_animation.css" rel="stylesheet" type="text/css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.1.3/toastr.min.css" async>
-
+		<script src="//cdn.jsdelivr.net/jdenticon/1.4.0/jdenticon.min.js" async></script>
 	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.11/angular.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.8/angular-route.js"></script>
 	<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.1.4/ui-bootstrap-tpls.min.js"></script>
-	<script src="//cdn.jsdelivr.net/jdenticon/1.3.2/jdenticon.min.js"></script>
+
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap3-dialog/1.34.5/js/bootstrap-dialog.min.js" async></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.1.3/toastr.min.js" async></script>
 
+	<script src="js/controller/navbarCtrl.js"></script> <!-- load up our controller -->
 	<script src="js/controller/profileCtrl.js"></script> <!-- load up our controller -->
 	<script src="js/services/profileService.js"></script> <!-- load our game service -->
 	<script src="js/services/jdenticonService.js"></script> <!-- load our game service -->
@@ -30,11 +32,18 @@
 	<script src="/socket.io/socket.io.js"></script>
 	<script>
 	  var socket = io.connect();
+		socket.on('new message', function(from){
+			toastr.options = {
+				"positionClass": "toast-bottom-left",
+			};
+			var newMessage = 'New message from ' + from;
+			console.log("here1");
+			toastr.success(newMessage);
+		});
 	</script>
-
 </head>
+<div navbar></div> <!--navbar directive-->
 <body ng-controller="profileCtrl" ng-init="displayGames()">
-	<div navbar></div> <!--navbar directive-->
 	<main>
 		<div class="col col-md-10 col-sm-12 col-xs-12 content">
 			<div id="profile" class="col col-md-12 col-sm-12 col-xs-12">
