--- a/views/user.ejs
+++ b/views/user.ejs
@@ -1,8 +1,9 @@
 <!doctype html>
 <html ng-app="gameApp">
 <head>
-	<title>User</title>
+	<title>User profile</title>
 	<meta charset="UTF-8">
+	<link rel="icon" type="image/svg+xml" href="/asets/logo.svg">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
@@ -15,6 +16,7 @@
 	<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 	<script src="//cdn.jsdelivr.net/jdenticon/1.3.2/jdenticon.min.js"></script>
 
+	<script src="/js/controller/navbarCtrl.js"></script> <!-- load up our controller -->
 	<script src="/js/controller/userCtrl.js"></script> <!-- load up our controller -->
 	<script src="/js/services/userService.js"></script> <!-- load our game service -->
 	<script src="/js/services/jdenticonService.js"></script> <!-- load our game service -->
@@ -22,8 +24,8 @@
 	<script src="/js/directive.js"></script>
 
 </head>
+<div navbar></div>
 <body ng-controller="userCtrl">
-	<div navbar></div>
 	<main>
 		<div class="content">
 			<div id="profile" class="col col-md-12 col-xs-12 col-sm-12">
@@ -51,25 +53,10 @@
 			      <figcaption>{{i.name}}</figcaption>
 			    </figure>
 			  </li>
-			</ul>
-			<!-- <div class="col col-md-12 col-sm-12 col-xs-12">
-				<div class="masonary-row row cards">
-						<div ng-repeat="i in games">
-							<div class="col-xs-6 col-sm-6 col-md-6 col-lg-3">
-								<div class="thumbnail ">
-									<button ng-class="change? 'btn btn-success trade' : 'btn btn-primary trade'" ng-click="sendGameRequest(i); change = !change; send_button = true" ng-disabled="send_button">
-										<span ng-hide="change"><i class="fa fa-star" aria-hidden="true"></i> Trade</span>
-										<span ng-show="change"><i class="fa fa-check" aria-hidden="true"></i> Sent</span></button>
-									<img src="https://images.igdb.com/igdb/image/upload/t_cover_big_2x/{{i.cover}}" onerror="if (this.src != 'error.jpg') this.src = '../asets/no-image-found.gif'">
-								<div class="caption">
-									<h4>{{i.name}}</h4>
-									<p class="flex-text text-muted"></p>
-								</div>
-							</div>
-					</div>
+				<div class="alert alert-info" id="error" class="col col-md-12 col-xs-12" ng-show="games_error" style="margin-top: 10px">
+				  <strong>Hmmmm...</strong> Looks like this user hasn't added any games! <i class="fa fa-frown-o"></i>
 				</div>
-			</div>
-		</div> -->
+			</ul>
 	</div>
 	<div footer></div>
 </body>
